--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "boilerplate",
+  "name": "reactweather",
   "version": "1.0.0",
   "description": "Simple react app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "script":"node server.js"
   },
   "author": "Andrew Mead",
   "license": "MIT",
