--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "script":"node server.js"
+    "script": "node server.js"
   },
   "author": "Andrew Mead",
   "license": "MIT",
@@ -22,7 +22,12 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.24.1",
-    "webpack": "^1.12.13",
-    "braces": ">=2.3.1"
+    "braces": ">=2.3.1",
+    "css-loader": "0.23.1",
+    "foundation-sites": "6.2.0",
+    "jquery": "2.2.1",
+    "script-loader": "0.6.1",
+    "style-loader": "0.13.0",
+    "webpack": "^1.12.13"
   }
 }
